Fix Various CSS misbehaviour - Add top margin KinderListView - Set All Questions to use all available width - Make top and bottom margin of titles to rem - Fix progressbar covering up open menus

--- a/ebegu-web/src/style/variables.less
+++ b/ebegu-web/src/style/variables.less
@@ -104,7 +104,7 @@
 @z-index-navbar: 102;
 @z-index-dashboard: 105;
 @z-index-menu: 105;
-@z-index-progressbar: 106;
+@z-index-progressbar: 103;
 @z-index-sidenav: 101;
 @z-index-kommentar: 101;
 @z-index-toolbar: 104;
